--- a/PetWidget/Base.lproj/MainInterface.storyboard
+++ b/PetWidget/Base.lproj/MainInterface.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="M4Y-Lb-cyx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="M4Y-Lb-cyx">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -16,12 +16,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BD" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tLc-cG-mVv">
-                                <rect key="frame" x="205" y="31" width="160" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="205" y="31" width="160" height="21.5"/>
+                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="距離生日剩下" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TBJ-dl-JC9">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="距離生日還有" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TBJ-dl-JC9">
                                 <rect key="frame" x="205" y="5" width="160" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -34,31 +34,50 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="home" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aft-TO-Jlw">
-                                <rect key="frame" x="205" y="82.5" width="160" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="205" y="83.5" width="160" height="21.5"/>
+                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已經陪伴" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jYI-Lz-zAM">
-                                <rect key="frame" x="205" y="56.5" width="160" height="21"/>
+                                <rect key="frame" x="205" y="57.5" width="160" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EWq-VD-la9">
+                                <rect key="frame" x="205" y="108" width="160" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SRL-KS-fgP">
+                                <rect key="frame" x="0.0" y="0.0" width="370" height="200"/>
+                                <connections>
+                                    <action selector="tapBtn:" destination="M4Y-Lb-cyx" eventType="touchUpInside" id="drl-hA-Ufu"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="SRL-KS-fgP" firstAttribute="trailing" secondItem="ssy-KU-ocm" secondAttribute="trailing" id="0TG-Sv-AcK"/>
+                            <constraint firstItem="SRL-KS-fgP" firstAttribute="bottom" secondItem="ssy-KU-ocm" secondAttribute="bottom" id="15h-u4-thH"/>
                             <constraint firstItem="xu5-kp-aRu" firstAttribute="top" secondItem="S3S-Oj-5AN" secondAttribute="top" id="4vo-fy-v5r"/>
                             <constraint firstItem="TBJ-dl-JC9" firstAttribute="top" secondItem="S3S-Oj-5AN" secondAttribute="top" constant="5" id="7cu-GS-h3w"/>
                             <constraint firstItem="jYI-Lz-zAM" firstAttribute="top" secondItem="tLc-cG-mVv" secondAttribute="bottom" constant="5" id="9He-Se-09t"/>
+                            <constraint firstItem="ssy-KU-ocm" firstAttribute="trailing" secondItem="EWq-VD-la9" secondAttribute="trailing" constant="5" id="ECu-GE-Xo4"/>
+                            <constraint firstItem="EWq-VD-la9" firstAttribute="leading" secondItem="xu5-kp-aRu" secondAttribute="trailing" constant="5" id="GG8-lo-3rB"/>
                             <constraint firstAttribute="trailing" secondItem="TBJ-dl-JC9" secondAttribute="trailing" constant="5" id="NMI-wN-DzN"/>
                             <constraint firstItem="ssy-KU-ocm" firstAttribute="trailing" secondItem="Aft-TO-Jlw" secondAttribute="trailing" constant="5" id="NMh-Ca-2sT"/>
                             <constraint firstItem="xu5-kp-aRu" firstAttribute="leading" secondItem="ssy-KU-ocm" secondAttribute="leading" id="NQT-bf-WDG"/>
                             <constraint firstItem="Aft-TO-Jlw" firstAttribute="top" secondItem="jYI-Lz-zAM" secondAttribute="bottom" constant="5" id="OmL-gt-rDb"/>
+                            <constraint firstItem="EWq-VD-la9" firstAttribute="top" secondItem="Aft-TO-Jlw" secondAttribute="bottom" constant="3" id="Ptt-2m-7WM"/>
                             <constraint firstItem="jYI-Lz-zAM" firstAttribute="leading" secondItem="xu5-kp-aRu" secondAttribute="trailing" constant="5" id="SHN-ux-Fz1"/>
                             <constraint firstItem="ssy-KU-ocm" firstAttribute="bottom" secondItem="xu5-kp-aRu" secondAttribute="bottom" id="ilA-6W-dLC"/>
+                            <constraint firstItem="SRL-KS-fgP" firstAttribute="leading" secondItem="ssy-KU-ocm" secondAttribute="leading" id="jds-9k-uoa"/>
                             <constraint firstItem="tLc-cG-mVv" firstAttribute="top" secondItem="TBJ-dl-JC9" secondAttribute="bottom" constant="5" id="kKO-BC-1IR"/>
                             <constraint firstItem="TBJ-dl-JC9" firstAttribute="leading" secondItem="xu5-kp-aRu" secondAttribute="trailing" constant="5" id="lNi-xE-gWp"/>
+                            <constraint firstItem="SRL-KS-fgP" firstAttribute="top" secondItem="S3S-Oj-5AN" secondAttribute="top" id="nZ0-aG-uvY"/>
                             <constraint firstItem="ssy-KU-ocm" firstAttribute="trailing" secondItem="tLc-cG-mVv" secondAttribute="trailing" constant="5" id="qOS-20-Q2G"/>
                             <constraint firstItem="tLc-cG-mVv" firstAttribute="leading" secondItem="xu5-kp-aRu" secondAttribute="trailing" constant="5" id="wa7-Ui-RMs"/>
                             <constraint firstItem="Aft-TO-Jlw" firstAttribute="leading" secondItem="xu5-kp-aRu" secondAttribute="trailing" constant="5" id="z5E-3e-JBn"/>
@@ -71,8 +90,11 @@
                     <size key="freeformSize" width="370" height="200"/>
                     <connections>
                         <outlet property="bdLabelWidget" destination="tLc-cG-mVv" id="zif-ao-lh0"/>
+                        <outlet property="bdText" destination="TBJ-dl-JC9" id="3p4-bZ-s4f"/>
                         <outlet property="homeLabel" destination="Aft-TO-Jlw" id="M8t-D4-rSn"/>
+                        <outlet property="homeText" destination="jYI-Lz-zAM" id="okA-J0-pjb"/>
                         <outlet property="imageView" destination="xu5-kp-aRu" id="otT-Pf-YvY"/>
+                        <outlet property="walkLabel" destination="EWq-VD-la9" id="2a9-Ia-yHc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vXp-U4-Rya" userLabel="First Responder" sceneMemberID="firstResponder"/>
