--- a/NoteApp/Base.lproj/Main.storyboard
+++ b/NoteApp/Base.lproj/Main.storyboard
@@ -114,7 +114,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="jKS-At-cUY">
-                                <rect key="frame" x="0.0" y="769" width="414" height="44"/>
+                                <rect key="frame" x="0.0" y="764" width="414" height="49"/>
                                 <items>
                                     <barButtonItem systemItem="camera" id="0Cp-sC-6iY">
                                         <connections>
@@ -140,11 +140,11 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DOs-SX-joi">
-                                <rect key="frame" x="10" y="590.66666666666663" width="394" height="168.33333333333337"/>
+                                <rect key="frame" x="10" y="585.66666666666663" width="394" height="168.33333333333337"/>
                                 <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="輸入回憶" translatesAutoresizingMaskIntoConstraints="NO" id="00F-zS-BUz">
-                                <rect key="frame" x="20" y="191.00000000000003" width="374" height="391.66666666666674"/>
+                                <rect key="frame" x="20" y="191.00000000000003" width="374" height="386.66666666666674"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
@@ -216,18 +216,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="氣溫" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1A7-di-bXQ">
-                                <rect key="frame" x="223" y="398" width="171" height="142"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" alignment="bottom" spacing="143" translatesAutoresizingMaskIntoConstraints="NO" id="z0g-7U-cM4">
-                                <rect key="frame" x="10" y="57" width="395" height="333"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uZK-7L-9XG">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="z0g-7U-cM4">
+                                <rect key="frame" x="10" y="54" width="394" height="310"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="87" translatesAutoresizingMaskIntoConstraints="NO" id="VF5-v4-j5e">
-                                        <rect key="frame" x="0.0" y="0.0" width="395" height="40"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VF5-v4-j5e">
+                                        <rect key="frame" x="0.0" y="0.0" width="394" height="40"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q9A-Xh-OAl">
                                                 <rect key="frame" x="0.0" y="1" width="40" height="38.666666666666671"/>
@@ -241,12 +237,12 @@
                                                 </connections>
                                             </button>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="City Name" textAlignment="right" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="jCf-Uw-SXi">
-                                                <rect key="frame" x="127" y="0.0" width="141" height="40"/>
+                                                <rect key="frame" x="40" y="0.0" width="314" height="40"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                 <textInputTraits key="textInputTraits" returnKeyType="go"/>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="faN-EQ-gKY">
-                                                <rect key="frame" x="355" y="1" width="40" height="37.666666666666671"/>
+                                                <rect key="frame" x="354" y="1" width="40" height="37.666666666666671"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="M8S-gi-oGh"/>
                                                     <constraint firstAttribute="width" constant="40" id="x9R-Zx-Kn5"/>
@@ -259,27 +255,41 @@
                                         </subviews>
                                     </stackView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3rf-BD-LDH">
-                                        <rect key="frame" x="245" y="183" width="150" height="150"/>
+                                        <rect key="frame" x="0.0" y="48" width="394" height="150"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="150" id="gf3-Vz-3CB"/>
                                             <constraint firstAttribute="height" constant="150" id="jW1-bb-IAB"/>
                                         </constraints>
                                     </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="城市" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Cj-td-YYu">
+                                        <rect key="frame" x="0.0" y="206" width="394" height="48"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="氣溫" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1A7-di-bXQ">
+                                        <rect key="frame" x="0.0" y="262" width="394" height="48"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="城市" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Cj-td-YYu">
-                                <rect key="frame" x="20" y="398" width="145" height="155"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="uZK-7L-9XG" secondAttribute="bottom" constant="83" id="4xc-rH-2cS"/>
+                            <constraint firstItem="r5p-ci-5Ey" firstAttribute="trailing" secondItem="z0g-7U-cM4" secondAttribute="trailing" constant="10" id="C9l-NR-UcN"/>
+                            <constraint firstAttribute="trailing" secondItem="uZK-7L-9XG" secondAttribute="trailing" id="RWd-o7-ZGV"/>
+                            <constraint firstItem="uZK-7L-9XG" firstAttribute="leading" secondItem="DUU-Lk-7cX" secondAttribute="leading" id="fy7-rJ-4dp"/>
+                            <constraint firstItem="z0g-7U-cM4" firstAttribute="leading" secondItem="r5p-ci-5Ey" secondAttribute="leading" constant="10" id="qxJ-Rd-SyM"/>
+                            <constraint firstItem="z0g-7U-cM4" firstAttribute="top" secondItem="r5p-ci-5Ey" secondAttribute="top" constant="10" id="rST-wF-9df"/>
+                            <constraint firstItem="uZK-7L-9XG" firstAttribute="top" secondItem="DUU-Lk-7cX" secondAttribute="top" id="rzb-FJ-bjF"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="r5p-ci-5Ey"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="天氣" id="Rw9-Vp-Mq2"/>
+                    <tabBarItem key="tabBarItem" title="天氣" image="sun.min" catalog="system" id="Rw9-Vp-Mq2"/>
                     <connections>
+                        <outlet property="background" destination="uZK-7L-9XG" id="cKb-d4-aYT"/>
                         <outlet property="cityLabel" destination="3Cj-td-YYu" id="iP9-Eg-exo"/>
                         <outlet property="conditionImageView" destination="3rf-BD-LDH" id="VZg-JV-EWz"/>
                         <outlet property="searchTextField" destination="jCf-Uw-SXi" id="2uE-aj-mU1"/>
@@ -367,9 +377,9 @@
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="xkR-GL-f3n">
                                 <rect key="frame" x="20" y="65" width="291" height="32"/>
                                 <segments>
-                                    <segment title="寵物用品"/>
-                                    <segment title="寵物餐廳"/>
                                     <segment title="公園"/>
+                                    <segment title="寵物餐廳"/>
+                                    <segment title="寵物用品"/>
                                     <segment title="動物醫院"/>
                                 </segments>
                                 <connections>
@@ -841,5 +851,6 @@
         <image name="map" catalog="system" width="128" height="113"/>
         <image name="photo" catalog="system" width="128" height="93"/>
         <image name="plus.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="sun.min" catalog="system" width="128" height="121"/>
     </resources>
 </document>
